[project]
name = "linear-changelog-generator"
version = "0.1.0"
description = "Generate changelog entries from Linear issues using AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.39.0",
    "python-slugify>=8.0.0",
    "tiktoken>=0.5.0",
    "linear-python>=0.2.2",
]
